<resources>
    <string name="app_name" translatable="false">WhatsApp StickerMaster</string>
    <string name="tray_image_content_description">Sticker Pack Tray Image</string>
    <string name="error_adding_sticker_pack">Could not add this sticker pack. Please install the latest version of WhatsApp before adding sticker pack</string>
    <string name="add_pack_fail_prompt_update_whatsapp">Sticker pack not added. If you\'d like to add it, make sure you update to the latest version of WhatsApp.</string>
    <string name="add_pack_fail_prompt_update_play_link">Update</string>
    <string name="cannot_find_play_store">Google Play is not installed on the device.</string>
    <string name="title_validation_error">Error with the pack</string>
    <string name="permission_granted">Pemission GRANTED</string>
    <string name="permission_denided">Pemission DENIDED</string>
    <string name="sticker_packs">Sticker Packs</string>
    <string name="loading">Wait while loading list…</string>
    <string name="somthing_wrong">Something want wrong…</string>
    <string name="permission_needed">Permission Needed</string>
    <string name="okText">OK</string>
    <string name="permission_message">This app requires storage permission to download Stickers</string>
    <string name="cancel">Cancel</string>
    <string name="downloading">Downloading Stickers...</string>
    <string name="download_in_background">Download in background</string>
    <string name="completed_in_background">Download will be completed in background</string>
    <string name="refresh">Refresh</string>
    <string name="add_to_whatsapp">Add to WhatsApp</string>
    <string name="sticker_pack_added_to_whatsapp">Sticker pack added to WhatsApp</string>
    <string name="rate_us">Rate Us</string>
    <string name="about">About</string>
    <string name="update">Update</string>
    <string name="update_later">Update later</string>
</resources>
